cabal-version:      3.0
name:               biscuit-demo
version:            0.0.1.0
homepage:           https://github.com/tchoutri/biscuit-demo#readme
bug-reports:        https://github.com/tchoutri/biscuit-demo/issues
author:             Théophile Choutri
maintainer:         Théophile Choutri
license:            BSD-3-Clause
build-type:         Simple
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/tchoutri/biscuit-demo

common common-extensions
  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -flate-specialise

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts "-N -T"

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    API.Server
    Token.Server

  build-depends:
    , aeson                <=1.6
    , base                 ^>=4.14
    , biscuit-haskell      ^>=0.2
    , biscuit-servant      ^>=0.2
    , bytestring           ^>=0.10
    , colourista           ^>=0.1
    , containers           ^>=0.6
    , http-api-data        ^>=0.4
    , http-types           ^>=0.12
    , mtl                  ^>=2.2
    , optics-core          ^>=0.4
    , servant              ^>=0.19
    , servant-client       ^>=0.19
    , servant-client-core  ^>=0.19
    , servant-lucid        ^>=0.9
    , servant-server       ^>=0.19
    , text                 ^>=1.2
    , text-display         ^>=0.0
    , time                 ^>=1.9
    , urn                  ^>=0.1
    , uuid                 ^>=1.3
    , vector               ^>=0.12
    , wai                  ^>=3.2
    , warp                 ^>=3.3

executable api-server
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/api-server
  build-depends:
    , base
    , biscuit-demo

executable dispenser
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/dispenser
  build-depends:
    , base
    , biscuit-demo

-- executable messager
--   import:         common-extensions
--   import:         common-ghc-options
--   import:         common-rts-options
--   main-is:        Main.hs
--   hs-source-dirs: app/messager
--   build-depends:
--     , base
--     , biscuit-demo
